--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -3,11 +3,12 @@ html, body{
    overflow-x: hidden;
 }
 body {
-   font-family: primary, sans-serif;
+   font-family: 'Poppins', sans-serif;
    font-weight: 400;
    font-size: 16px;
-   line-height: 1.25;
+   line-height: 1.5;
    min-width: 320px;
+	 color: #fff;
 }
 .wrapper{
    min-height: 100%;
@@ -28,10 +29,5 @@ img {
 .container{
    max-width: 1200px;
    padding: 0 15px;
-   margin: 0 auto;
-}
-.container-fluid{
-   max-width: 1920px;
-   padding: 0 10px;
    margin: 0 auto;
 }
