--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,33 +1,30 @@
-html, body{
-   height: 100%;
-   overflow-x: hidden;
+html,
+body {
+	height: 100%;
+	overflow-x: hidden;
 }
 body {
-   font-family: 'Poppins', sans-serif;
-   font-weight: 400;
-   font-size: 16px;
-   line-height: 1.5;
-   min-width: 320px;
-	 color: #fff;
+	font-family: 'Poppins', sans-serif;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 1.5;
+	min-width: 320px;
+	color: #fff;
 }
-.wrapper{
-   min-height: 100%;
-   display: flex;
-   flex-direction: column;
+.wrapper {
+	min-height: 100%;
+	display: flex;
+	flex-direction: column;
 }
-.main{
-   flex-grow: 1;
+.main {
+	flex-grow: 1;
 }
 img {
-   display: block;
-   max-width: 100%;
- }
- video{
-   display: block;
-   max-width: 100%;
- }
-.container{
-   max-width: 1200px;
-   padding: 0 15px;
-   margin: 0 auto;
+	display: block;
+	width: 100%;
+}
+.container {
+	max-width: 1200px;
+	padding: 0 15px;
+	margin: 0 auto;
 }
