--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,6 +4,7 @@
 
 /* header */
 .header{
+	position: relative;
 	min-height: 100vh;
 }
 
@@ -90,7 +91,6 @@
 			object-fit: cover;
 			width: 100vw;
 			height: 100vh;
-			z-index: -1;
 		}
 	}
 
@@ -167,6 +167,70 @@
 		}
 	}
 
+}
+
+
+.degustation{
+	padding: 80px 0;
+	
+	&__wrapper{
+		display: flex;
+		justify-content: space-between;
+		gap: 30px;
+	}
+
+	&__list{
+		max-width: 470px;
+		width: 100%;
+
+		display: flex;
+		flex-direction: column;
+		gap: 40px;
+	}
+
+	&__item{
+		position: relative;
+		color: #000;
+
+		&::after{
+			position: absolute;
+			content: "";
+			width: 100%;
+			height: 1px;
+			bottom: -20px;
+			left: 0;
+			background-color: #e7e7e7;
+		}
+	}
+
+	&__time{
+		font-size: 24px;
+		line-height: 32px;
+		font-weight: 600;
+	}
+
+	&__programm{
+		margin-top: 10px;
+
+		display: flex;
+		gap: 10px;
+
+		font-size: 18px;
+		line-height: 32px;
+		font-weight: 400;
+	}
+
+	&__programm-decor{
+		width: 40px;
+		background-image: url(../images/sprite.svg#decor-dots);
+		background-repeat: no-repeat;
+		background-position: center center;
+	}
+
+	&__img{
+		max-width: 670px;
+		object-fit: contain;
+	}
 }
 
 
