--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -28,3 +28,59 @@ img {
 	padding: 0 15px;
 	margin: 0 auto;
 }
+
+.btn-popup{
+   transition: $trans;
+   position: relative;
+   &::after{
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 100%;
+      border-radius: 4px;
+      border: 1px solid transparent;
+      left: 0;
+      top: 0;
+      transition: $trans;
+   }
+   &:hover{
+      background-color: $primary-color;
+      color: $secondary-color;
+      box-shadow: 0 0 10px rgba($primary-color, .5);
+      &::after{
+         border: 1px solid $primary-color;
+         width: calc(100% + 10px);
+         height: calc(100% + 10px);
+         left: -5px;
+         top: -5px;
+      }
+   }
+}
+
+.btn-social{
+   border-radius: 50%;
+   position: relative;
+   &::after{
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      border: 1px solid transparent;
+      left: 0;
+      top: 0;
+      transition: $trans;
+   }
+   &:hover{
+      background-color: $primary-color;
+      color: $secondary-color;
+      box-shadow: 0 0 10px rgba($primary-color, .5);
+      &::after{
+         border: 1px solid $primary-color;
+         width: calc(100% + 10px);
+         height: calc(100% + 10px);
+         left: -5px;
+         top: -5px;
+      }
+   }
+}
