--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -30,7 +30,7 @@
 	justify-content: space-between;
 	align-items: center;
 
-	&__item{
+	&__item {
 		position: relative;
 
 		&::after {
@@ -359,6 +359,104 @@
 		}
 	}
 }
+
+.modal {
+	transition: $trans;
+
+	&-box {
+		position: fixed;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%, -50%) scale(1.2);
+		box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+		max-width: 380px;
+		width: 100%;
+		padding: 80px 60px 60px;
+		border-radius: 16px;
+		background-color: #fff;
+		opacity: 0;
+		pointer-events: none;
+		transition: $trans;
+	}
+
+	&-form {
+		display: flex;
+		flex-direction: column;
+		gap: 20px;
+		align-items: center;
+		justify-content: center;
+
+		&__input {
+			max-width: 320px;
+			width: 100%;
+			height: 60px;
+			padding: 0 10px;
+			border-radius: 4px;
+			border: 1px solid #ccc;
+			transition: $trans;
+
+			&:focus {
+				border-color: transparent;
+			}
+		}
+
+		&__btn {
+			display: block;
+			max-width: 320px;
+			width: 100%;
+			height: 60px;
+
+			font-size: 18px;
+			line-height: 24px;
+			font-weight: 500;
+			text-transform: uppercase;
+			color: #fff;
+
+			background-color: $secondary-color;
+			border-radius: 4px;
+			cursor: pointer;
+			transition: $trans;
+
+			&:hover {
+				color: $secondary-color;
+				background-color: $primary-color;
+			}
+		}
+	}
+
+	&-close {
+		position: absolute;
+		top: 10px;
+		right: 10px;
+		padding: 10px;
+		font-size: 32px;
+		line-height: 1;
+		font-weight: 500;
+		transition: $trans;
+		cursor: pointer;
+
+		&:hover {
+			transform: scale(1.2);
+			color: $primary-color;
+		}
+	}
+
+	&.active{
+		position: fixed;
+		width: 100vw;
+		height: 100vh;
+		background-color: rgba(0, 0, 0, 0.8);
+		z-index: 99;
+	}
+}
+
+.modal.active .modal-box {
+	opacity: 1;
+	pointer-events: auto;
+	transform: translate(-50%, -50%) scale(1);
+}
+
+
 
 /* media requests */
 @import 'media';
